--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -511,18 +511,18 @@
   "wallet.backup.recovery.phrase.entry.dialog.terms.and.condition.recovery": "I understand that the only way to recover my wallet if my computer is lost, broken, stolen, or stops working is to use my wallet recovery phrase.",
   "wallet.backup.recovery.phrase.entry.dialog.terms.and.condition.rewards": "<strong>I understand that I will need the wallet recovery phrase of this wallet to receive my Incentivized Testnet ada rewards on the Cardano mainnet.</strong>",
   "wallet.backup.recovery.phrase.entry.dialog.verification.instructions": "Verify your wallet recovery phrase by clicking words in the exact order you wrote them down.",
-  "wallet.byron.badge.label": "!!!Byron",
-  "wallet.byron.notification.actionLearnMore": "!!!Learn more",
-  "wallet.byron.notification.actionMove": "!!!Move ada to an existing wallet",
-  "wallet.byron.notification.addWallet": "!!!Create a new wallet",
-  "wallet.byron.notification.addWalletDescription.line1": "!!!\"{activeWalletName}\"\" is a Byron legacy wallet that does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new wallet that is Shelley-compatible.",
-  "wallet.byron.notification.addWalletDescription.line2": "!!!Since all of your wallets are Byron legacy wallets you will first need to create a new Shelley wallet.",
-  "wallet.byron.notification.addWalletTitle": "!!!Create a Shelley wallet",
-  "wallet.byron.notification.learnMore.url": "!!!https://iohk.zendesk.com/hc/en-us/articles/360038726373",
-  "wallet.byron.notification.moveFundsDescription.line1": "!!!\"{activeWalletName}\"\" is a Byron legacy wallet that does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new wallet that is Shelley-compatible.",
-  "wallet.byron.notification.moveFundsDescription.line2": "!!!You can create a {moveFundsLink} or move funds to one of your existing wallets.",
-  "wallet.byron.notification.moveFundsDescription.line2.link.label": "!!!brand new wallet",
-  "wallet.byron.notification.moveFundsTitle": "!!!Move funds from {activeWalletName}",
+  "wallet.byron.badge.label": "Byron",
+  "wallet.byron.notification.actionLearnMore": "Learn more",
+  "wallet.byron.notification.actionMove": "Move ada to an existing wallet",
+  "wallet.byron.notification.addWallet": "Create a new wallet",
+  "wallet.byron.notification.addWalletDescription.line1": "<q>{activeWalletName}</q> is a Byron legacy wallet that does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new wallet that is Shelley-compatible.",
+  "wallet.byron.notification.addWalletDescription.line2": "Since all of your wallets are Byron legacy wallets you will first need to create a new Shelley wallet.",
+  "wallet.byron.notification.addWalletTitle": "Create a Shelley wallet",
+  "wallet.byron.notification.learnMore.url": "https://iohk.zendesk.com/hc/en-us/articles/360038726373",
+  "wallet.byron.notification.moveFundsDescription.line1": "<q>{activeWalletName}</q> is a Byron legacy wallet that does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new wallet that is Shelley-compatible.",
+  "wallet.byron.notification.moveFundsDescription.line2": "You can create a {moveFundsLink} or move funds to one of your existing wallets.",
+  "wallet.byron.notification.moveFundsDescription.line2.link.label": "brand new wallet",
+  "wallet.byron.notification.moveFundsTitle": "Move funds from <q>{activeWalletName}</q>",
   "wallet.create.dialog.configStep": "Config",
   "wallet.create.dialog.create.personal.wallet.button.label": "Create wallet",
   "wallet.create.dialog.create.personal.wallet.button.label.itn": "Create Shelley wallet",
@@ -643,9 +643,9 @@
   "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer1": "Hardware wallets keep your private keys stored securely on a physical device that is immune to common computer threats such as viruses and software bugs. Recovery phrases for hardware wallets should always be kept offline. By entering your hardware wallet recovery phrase in Daedalus, you are exposing your hardware wallet private keys to the security risks associated with computers and software.",
   "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer2": "We strongly recommend that you delete the Balance wallet which is restored from your hardware wallet once you have moved any funds into a Rewards wallet.",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind": "What kind of Daedalus wallet would you like to restore?",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind12WordByron": "!!!12 words <em>(Byron legacy wallet)</em>",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind15WordShelley": "!!!15 words <em>(Shelley wallet)</em>",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind27WordPaper": "!!!27 words - paper wallet (Byron legacy wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind12WordByron": "12 words (Byron legacy wallet)",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind15WordShelley": "15 words <em>(Shelley wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind27WordPaper": "27 words - paper wallet (Byron legacy wallet)",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKind": "What kind of hardware wallet would you like to restore?",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindLedger": "12, 18 or 24 words - Ledger Nano S or Nano X (Balance wallet)",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindTrezor": "12, 18 or 24 words - Trezor (Balance wallet)",
@@ -654,8 +654,8 @@
   "wallet.restore.dialog.step.walletKind.label.walletKindHardware": "Hardware wallet",
   "wallet.restore.dialog.step.walletKind.label.walletKindYoroi": "Yoroi wallet",
   "wallet.restore.dialog.step.walletKind.label.yoroiWalletKind": "What kind of Yoroi wallet would you like to restore?",
-  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindByronLegacy15Word": "!!!15 words <em>(Byron legacy wallet)</em>",
-  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindShelley15Word": "!!!15 words <em>(Shelley wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindByronLegacy15Word": "15 words <em>(Byron legacy wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindShelley15Word": "15 words <em>(Shelley wallet)</em>",
   "wallet.restore.dialog.stepsCounter": "Step {currentStep} of {totalSteps}",
   "wallet.restore.dialog.tab.title.certificate": "Daedalus paper wallet",
   "wallet.restore.dialog.tab.title.recoveryPhrase": "Daedalus wallet",
