--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -511,18 +511,18 @@
   "wallet.backup.recovery.phrase.entry.dialog.terms.and.condition.recovery": "コンピューターが喪失、故障、盗難、作動不能などとなった場合、ウォレットは復元フレーズを使用することによってのみ復元することができることを理解しました。",
   "wallet.backup.recovery.phrase.entry.dialog.terms.and.condition.rewards": "<strong>インセンティブ付きテストネットで得た報酬ADAをCardanoメインネットで受け取る際、このウォレットの復元フレーズが必要であることを理解しました。</strong>",
   "wallet.backup.recovery.phrase.entry.dialog.verification.instructions": "書き留めた通りの正しい順に単語をクリックして、ウォレットの復元フレーズを検証してください。",
-  "wallet.byron.badge.label": "!!!Byron",
-  "wallet.byron.notification.actionLearnMore": "!!!Learn more",
-  "wallet.byron.notification.actionMove": "!!!Move ada to an existing wallet",
-  "wallet.byron.notification.addWallet": "!!!Create a new wallet",
-  "wallet.byron.notification.addWalletDescription.line1": "!!!\"{activeWalletName}\"\" is a Byron legacy wallet that does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new wallet that is Shelley-compatible.",
-  "wallet.byron.notification.addWalletDescription.line2": "!!!Since all of your wallets are Byron legacy wallets you will first need to create a new Shelley wallet.",
-  "wallet.byron.notification.addWalletTitle": "!!!Create a Shelley wallet",
-  "wallet.byron.notification.learnMore.url": "!!!https://iohk.zendesk.com/hc/en-us/articles/360038726373",
-  "wallet.byron.notification.moveFundsDescription.line1": "!!!\"{activeWalletName}\"\" is a Byron legacy wallet that does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new wallet that is Shelley-compatible.",
-  "wallet.byron.notification.moveFundsDescription.line2": "!!!You can create a {moveFundsLink} or move funds to one of your existing wallets.",
-  "wallet.byron.notification.moveFundsDescription.line2.link.label": "!!!brand new wallet",
-  "wallet.byron.notification.moveFundsTitle": "!!!Move funds from {activeWalletName}",
+  "wallet.byron.badge.label": "残高",
+  "wallet.byron.notification.actionLearnMore": "もっと知る",
+  "wallet.byron.notification.actionMove": "既存のウォレットにADAを移す",
+  "wallet.byron.notification.addWallet": "ウォレットを新規作成する",
+  "wallet.byron.notification.addWalletDescription.line1": "「<q>{activeWalletName}</q>」はByronのレガシーウォレットであり、Shelleyの委任機能をサポートしていません。ステークを委任して報酬を得るには、すべての資金をこのウォレットからShelley対応の新ウォレットに移してください。",
+  "wallet.byron.notification.addWalletDescription.line2": "既存ウォレットはすべてByronのレガシーウォレットであるため、Shelleyウォレットを新規作成する必要があります。",
+  "wallet.byron.notification.addWalletTitle": "Shelleyウォレットを作成してください",
+  "wallet.byron.notification.learnMore.url": "https://iohk.zendesk.com/hc/ja/articles/360038726373",
+  "wallet.byron.notification.moveFundsDescription.line1": "「<q>{activeWalletName}</q>」はByronのレガシーウォレットであり、Shelleyの委任機能をサポートしていません。ステークを委任して報酬を得るには、すべての資金をこのウォレットからShelley対応の新ウォレットに移してください。",
+  "wallet.byron.notification.moveFundsDescription.line2": "{moveFundsLink}か、既存ウォレットの1つに資金を移すことができます。",
+  "wallet.byron.notification.moveFundsDescription.line2.link.label": "ウォレットを新規作成する",
+  "wallet.byron.notification.moveFundsTitle": "「{activeWalletName}」の資金を移してください",
   "wallet.create.dialog.configStep": "!!!Config",
   "wallet.create.dialog.create.personal.wallet.button.label": "ウォレットを作成する",
   "wallet.create.dialog.create.personal.wallet.button.label.itn": "Shelleyウォレットを作成する",
@@ -643,9 +643,9 @@
   "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer1": "ハードウェアウォレットでは、ウィルスやソフトウェアのバグなどコンピューターにありがちな脅威に晒されることなく、物理的なデバイス上に秘密鍵を安全に保管できます。ハードウェアウォレットの復元フレーズは常にオフラインで保管してください。Daedalusにハードウェアウォレットの復元フレーズを入力することにより、ハードウェアウォレットの秘密鍵をコンピューターやソフトウェアに関連するセキュリティリスクに晒すことになります。",
   "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer2": "ハードウェアウォレットから復元した残高ウォレットは、資金を報酬ウォレットに移したら直ちに削除することを強くお勧めします。",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind": "どのDaedalusウォレットを復元しますか",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind12WordByron": "!!!12 words <em>(Byron legacy wallet)</em>",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind15WordShelley": "!!!15 words <em>(Shelley wallet)</em>",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind27WordPaper": "!!!27 words - paper wallet (Byron legacy wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind12WordByron": "12語 <em>（Byronレガシーウォレット）</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind15WordShelley": "15語 <em>（Shelleyウォレット）</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind27WordPaper": "27語 - ペーパーウォレット <em>（Byronレガシーウォレット）</em>",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKind": "どのタイプのハードウェアウォレットを復元しますか",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindLedger": "12語、18語、または24語 - Ledger Nano SまたはNano X (残高ウォレット)",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindTrezor": "12語、18語、または24語 - Trezor (残高ウォレット)",
@@ -654,8 +654,8 @@
   "wallet.restore.dialog.step.walletKind.label.walletKindHardware": "ハードウェアウォレット",
   "wallet.restore.dialog.step.walletKind.label.walletKindYoroi": "Yoroiウォレット",
   "wallet.restore.dialog.step.walletKind.label.yoroiWalletKind": "どのタイプのYoroiウォレットを復元しますか",
-  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindByronLegacy15Word": "!!!15 words <em>(Byron legacy wallet)</em>",
-  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindShelley15Word": "!!!15 words <em>(Shelley wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindByronLegacy15Word": "15語 <em>(Byronレガシーウォレット)</em>",
+  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindShelley15Word": "15語 <em>(Shelleyウォレット)</em>",
   "wallet.restore.dialog.stepsCounter": "ステップ{currentStep}/{totalSteps}",
   "wallet.restore.dialog.tab.title.certificate": "Daedalusペーパーウォレット",
   "wallet.restore.dialog.tab.title.recoveryPhrase": "Daedalusウォレット",
