--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -124,7 +124,6 @@
   "global.duration.months": "months",
   "global.duration.seconds": "seconds",
   "global.duration.years": "years",
-  "global.errors.failureAlert": "!!!Failure Alert",
   "global.errors.fieldIsRequired": "This field is required.",
   "global.errors.incompleteMnemonic": "Please enter all {expected} words.",
   "global.errors.invalidEmail": "Invalid email entered, please check.",
@@ -142,7 +141,6 @@
   "global.labels.close": "Close",
   "global.labels.create": "Create",
   "global.labels.filter": "Filter",
-  "global.labels.readMore": "!!!Read More",
   "global.labels.remove": "Remove",
   "global.labels.reset": "Reset",
   "global.labels.save": "Save",
@@ -185,7 +183,6 @@
   "loading.screen.updatedCardanoMessage": "Cardano node updated",
   "loading.screen.updatingCardanoMessage": "Updating Cardano node",
   "loading.screen.verifyingBlockchainMessage": "Verifying the blockchain ({verificationProgress}% complete) ",
-  "manualUpdate.button.label": "!!!Follow instructions and manually update",
   "news.newsfeed.empty": "Newsfeed is empty",
   "news.newsfeed.noFetch": "Trying to fetch the newsfeed...",
   "news.newsfeed.title": "Newsfeed",
@@ -509,7 +506,6 @@
   "static.about.copyright": "Input Output HK Limited. Licensed under",
   "static.about.license": "Apache 2.0 license",
   "static.about.title": "Daedalus",
-  "static.dummy.markdown": "!!!Content",
   "static.splash.network.buttonLabel": "I understand",
   "static.splash.network.flightDescription1": "Thank you for downloading the Daedalus Flight wallet! This version of Daedalus is specially created so users can test new features and we can squash usability bugs before pushing releases to the mainnet production version of the Daedalus wallet. ",
   "static.splash.network.flightDescription2": "Although Flight candidates are designed to test functionality, this is on the mainnet and will <b>be using mainnet ada. Transactions made using Flight candidates will be real ada payments.</b> If you are not a power user, we recommend you stick to using our stable, fully-tested production Daedalus wallet client. It is very important to note that transactions performed in Daedalus Flight are real and your funds will be transferred because the Cardano blockchain will be validating all transactions on mainnet.",
@@ -639,7 +635,7 @@
   "wallet.create.dialog.walletNameHint": "Enter wallet name",
   "wallet.dialog.passwordTooltip": "<b>We recommend using a password manager app</b> to manage and store your spending password. Generate a unique password using a password manager and paste it here. Passwords should never be reused.",
   "wallet.hardware.deviceStatus.connecting": "Connect your device and enter your PIN to unlock it",
-  "wallet.hardware.deviceStatus.connecting.known": "Connect the \"{walletName}\"\" device",
+  "wallet.hardware.deviceStatus.connecting.known": "Connect the \"{walletName}\" device",
   "wallet.hardware.deviceStatus.exportingPublicKeyError": "Disconnect and reconnect your device to restart the process",
   "wallet.hardware.deviceStatus.exporting_public_key": "Export the public key on your device",
   "wallet.hardware.deviceStatus.exporting_public_key_failed": "Exporting the public key failed",
@@ -649,7 +645,7 @@
   "wallet.hardware.deviceStatus.trezor_bridge_failure.link.label": "Installation instructions",
   "wallet.hardware.deviceStatus.trezor_bridge_failure.link.url": "https://wallet.trezor.io/#/bridge",
   "wallet.hardware.deviceStatus.unsupported_device": "The device is not supported!",
-  "wallet.hardware.deviceStatus.verifying_transaction": "Confirm the transaction using the \"{walletName}\"\" device",
+  "wallet.hardware.deviceStatus.verifying_transaction": "Confirm the transaction using the \"{walletName}\" device",
   "wallet.hardware.deviceStatus.verifying_transaction_failed": "Transaction confirmation failed",
   "wallet.hardware.deviceStatus.verifying_transaction_succeeded": "Transaction confirmed",
   "wallet.hardware.deviceStatus.wrong_firmware": "Unsupported firmware! {instructionsLink}",
